objects/docebo_v3__LearningPlanEnrollment__c.object
<CustomObject>
    <description>Represents Docebo&apos;s enrollments to learning plans.</description>
    <fields>
        <fullName>docebo_v3__CompletedCourses__c</fullName>
        <label>Completed Courses</label>
        <summaryFilterItems>
            <field>docebo_v3__LearningPlanCourseEnrollment__c.docebo_v3__Completed__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>docebo_v3__LearningPlanCourseEnrollment__c.docebo_v3__Effective__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>docebo_v3__LearningPlanCourseEnrollment__c.docebo_v3__UnenrollmentDate__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>docebo_v3__LearningPlanCourseEnrollment__c.docebo_v3__LearningPlanEnrollment__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>docebo_v3__Completion__c</fullName>
        <formula>IF(
    OR(
        ISBLANK(docebo_v3__LearningPlanCourses__c),
        docebo_v3__LearningPlanCourses__c = 0
    ), 0,
    docebo_v3__CompletedCourses__c / docebo_v3__LearningPlanCourses__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Completion</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>docebo_v3__DoceboUser__c</fullName>
        <description>A Docebo User</description>
        <label>Docebo User</label>
        <referenceTo>docebo_v3__DoceboUser__c</referenceTo>
        <relationshipLabel>Learning Plan Enrollments</relationshipLabel>
        <relationshipName>LearningPlanEnrollments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>docebo_v3__EnrolmentId__c</fullName>
        <description>Learning plan enrolment LMS Id.</description>
        <externalId>true</externalId>
        <label>Enrolment Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>docebo_v3__LearningPlanCourses__c</fullName>
        <formula>docebo_v3__LearningPlan__r.docebo_v3__Courses__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Learning Plan Courses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>docebo_v3__LearningPlan__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>A Docebo Learning Plan</description>
        <label>Learning Plan</label>
        <referenceTo>docebo_v3__LearningPlan__c</referenceTo>
        <relationshipLabel>Learning Plan Enrollments</relationshipLabel>
        <relationshipName>LearningPlanEnrollments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>docebo_v3__UnenrollmentDate__c</fullName>
        <description>date of user&apos;s unenrollment in a learning plan</description>
        <label>UnenrollmentDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>docebo_v3__Who__c</fullName>
        <label>Who</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Learning Plan Enrollment</label>
    <listViews>
        <fullName>docebo_v3__All</fullName>
        <columns>docebo_v3__EnrolmentId__c</columns>
        <columns>docebo_v3__DoceboUser__c</columns>
        <columns>docebo_v3__LearningPlan__c</columns>
        <columns>docebo_v3__CompletedCourses__c</columns>
        <columns>docebo_v3__LearningPlanCourses__c</columns>
        <columns>docebo_v3__Completion__c</columns>
        <columns>docebo_v3__UnenrollmentDate__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Learning Plan Enrollment Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Learning Plan Enrollments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>